Revert "Issue #2899634 by daniel.bosen, volkerk: Image style creation layout broken"
This reverts commit 9673c00fefa4f00209bc713c0050ad567aacd873.

--- a/sass/components/form-element.scss
+++ b/sass/components/form-element.scss
@@ -11,8 +11,7 @@
   display: flex;
   align-items: center;
 
-  .form-textarea-wrapper,
-  .image-style-preview {
+  .form-textarea-wrapper {
     flex: 1 1 auto;
   }
 }
